--- a/SmartBoy/res/values/strings.xml
+++ b/SmartBoy/res/values/strings.xml
@@ -2,24 +2,27 @@
 <resources>
 
     <string name="app_name">SmartBoy</string>
+    
     <string name="act_update_menu">Update Menus</string>
     <string name="act_check">Check</string>
     <string name="act_check_out">Check Out</string>
     <string name="act_order_new">New Order</string>
     <string name="act_order_list">Order List</string>
-    <string name="title_activity_main">SmartBoy</string>
-    <string name="hello_world">Hello world!</string>
+
     <string name="action_settings">Settings</string>
     <string name="grid_item">Table</string>
-    <string name="title_activity_tabel">Tabel</string>
-    <string name="table_total">Total</string>
     <string name="blank"></string>
+    
     <string name="table_status">Ordering Status</string>
+    <string name="table_total">Total</string>
     <string name="table_details">Order Details</string>
-    <string name="title_activity_new_order">Menu</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="title_activity_main">SmartBoy</string>
+    <string name="title_activity_tabel">Tabel</string>
+    <string name="title_activity_new_order">Menu</string>
+    <string name="kyay_oo">Kyay Oo</string>
+    
+    <string name="btn_check">Check</string>
+	<string name="btn_continue">Continue</string>
+	<string name="btn_cancel">Cancel</string>
 </resources>
